# RussianDependencyParser

./: .gitignore  CMakeLists.txt  README.md  test1142.xml
qt/gendict/: gendict.pro
qt/main/: main.pro
src/: main.cpp  model.cpp  model.h  paradigm.cpp
vs2010/: RussianDependencyParser.sln  RussianDependencyParser.vcxproj  RussianDependencyParser.vcxproj.filters
